--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/books
 spring.datasource.username=root
 spring.datasource.password=password
+
+spring.datasource.schema=api/src/main/resources/schema.sql
+
+# Specify the location of your SQL data file
+spring.datasource.data=api/src/main/resources/data.sql
